Slider editor improvement

--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/Assets/BlenderGridEditor.css
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/Assets/BlenderGridEditor.css
@@ -1,7 +1,7 @@
 
     .list-editor {
         cursor:pointer;
-        border:4px dashed #d9d9d9;
+        /*border:4px dashed #d9d9d9;*/
         padding:0px;
     }
 
