--- a/Src/Lecoati.BlenderGrid.Ui/Views/Partials/Grid/Editors/antoine.cshtml
+++ b/Src/Lecoati.BlenderGrid.Ui/Views/Partials/Grid/Editors/antoine.cshtml
@@ -1,15 +1,23 @@
-﻿@model dynamic
+﻿@inherits UmbracoViewPage<dynamic>
+
 @using Umbraco.Web.Templates
 @using Lecoati.BlenderGrid.Extension
+@using Lecoati.BlenderGrid.Extension.Models
 
 
 @{
-
     
-    UmbracoHelper test = Helper.GetUmbracoHelper();
+    BlenderRootModel c = Helper.GetBlender(Model);
+    
+}
 
-    var content = Helper.GetCurrentContent();
+@foreach (var i in c.Items) {
+
+
+    <h2>@(i.GetValue<string>("Campo1"))</h2>
+    <p>@(i.GetValue<string>("colorpicker"))</p>
+    <p>@(i.GetValue("contentpicker"))</p>
+
 
 }
 
-<h1>@content.Name</h1>
