Create BlenderController and let other controllers to inherit from this. When this happens the editor rendering process is hooked by the inheriting controller.

--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/views/Base.cshtml
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/views/Base.cshtml
@@ -2,5 +2,5 @@
 
 @if (Model.editor != null)
 {
-    @(Html.Action("RenderEditor", "Blender", new { editor = Model.editor.frontView.Value }))
+    @(Html.Action("RenderEditor", "Blender", new { editorAlias = Model.editor.alias, frontView = Model.editor.frontView.Value }))
 }
