--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/views/Base.cshtml
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/views/Base.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Web.Mvc.Html;
 
 @if (Model.editor != null)
-{
-    @(Html.Action("RenderEditor", "Blender", new { editorAlias = Model.editor.alias, frontView = Model.editor.frontView.Value }))
+{   
+    @(Html.Action("RenderEditor", "Blender", new { editorAlias = Model.editor.alias, frontView = Model.editor.frontView.Value, model = Model }))
 }
