Refactor BlenderRootModel to RenderModel and RenderModel to RenderValue

--- a/Src/Lecoati.BlenderGrid.Ui/Views/Partials/Grid/Editors/TestBlender.cshtml
+++ b/Src/Lecoati.BlenderGrid.Ui/Views/Partials/Grid/Editors/TestBlender.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Lecoati.BlenderGrid.Extension.Models;
 
-@inherits UmbracoViewPage<BlenderRootModel>
+@inherits UmbracoViewPage<BlenderModel>
 
 @{
     var model = Model;
