style improvement for Umbraco 7.2.3 and RTE

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/assets/leblendereditor.css
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/assets/leblendereditor.css
@@ -10,8 +10,9 @@
     }
 
     .list-editor .preview-LeBlender {
-        background:transparent;
-        border: 1px dashed #d9d9d9;
+          background: rgb(248, 248, 248);
+          border: 0px dashed #d9d9d9;
+          border-radius: 13px;
     }
 
     .list-editor .empty-item h2 {
