Nicer Exception and some code cleaning

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/assets/leblendereditor.css
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/assets/leblendereditor.css
@@ -1,4 +1,8 @@
 
+    .leblender-exception {
+        overflow: hidden;
+    }
+
     .list-editor {
         cursor:pointer;
         /*border:4px dashed #d9d9d9;*/
