--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/views/Base.cshtml
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/views/Base.cshtml
@@ -12,19 +12,21 @@
         String.Format("/views/partials/grid/editors/{0}.cshtml", Model.editor.alias) : Model.editor.frontView.Value;
 
     ViewDataDictionary datas = new ViewDataDictionary { { "editorAlias", Model.editor.alias }, { "frontView", frontView } };
-    
-    @*if (cacheEnable && Helper.IsFrontEnd())
+
+    int cacheExpiration = Helper.GetCacheExpiration(Model.editor.alias.ToString());
+
+    if (cacheExpiration > 0 && Helper.IsFrontEnd())
     {
         <text>
-            @Html.LeBlenderCachedPartial("/App_Plugins/Lecoati.LeBlender/core/views/Blender.cshtml", blenderModel, 0, guid, datas)
+            @Html.LeBlenderCachedPartial("/App_Plugins/Lecoati.LeBlender/core/views/Blender.cshtml", blenderModel, cacheExpiration, guid, datas)
         </text>
     }
     else
-    {*@
-    <text>
-        @Html.Partial("/App_Plugins/Lecoati.LeBlender/core/views/Blender.cshtml", blenderModel, datas)
-    </text>
-    //}
+    {
+        <text>
+            @Html.Partial("/App_Plugins/Lecoati.LeBlender/core/views/Blender.cshtml", blenderModel, datas)
+        </text>
+    }
 
 }
 catch (Exception ex)
