--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/views/Base.cshtml
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/views/Base.cshtml
@@ -1,40 +1,9 @@
 ﻿@using System.Web.Mvc.Html;
-@using Lecoati.LeBlender.Extension
-@using Lecoati.LeBlender.Extension.Models
 
-@try
-{
-    
-    string guid = Model.guid != null && Model.guid.Value != null ? Model.guid.Value.ToString() : "";
-    BlenderModel blenderModel = Helper.DeserializeBlenderModel(Model);
-    
-    var frontView = Model.editor.frontView == null || String.IsNullOrEmpty(Model.editor.frontView.Value) ?
-        String.Format("/views/partials/grid/editors/{0}.cshtml", Model.editor.alias) : Model.editor.frontView.Value;
+@*/***************************************/
+/* legacy adaptor 0.9.18 */
+/***************************************/*@
+@Html.Partial("/App_Plugins/Lecoati.LeBlender/editors/leblendereditor/views/Base.cshtml")
 
-    ViewDataDictionary datas = new ViewDataDictionary { { "editorAlias", Model.editor.alias }, { "frontView", frontView } };
 
-    int cacheExpiration = Helper.GetCacheExpiration(Model.editor.alias.ToString());
-
-    if (cacheExpiration > 0 && Helper.IsFrontEnd())
-    {
-        <text>
-            @Html.LeBlenderCachedPartial("/App_Plugins/Lecoati.LeBlender/core/views/Blender.cshtml", blenderModel, cacheExpiration, guid, datas)
-        </text>
-    }
-    else
-    {
-        <text>
-            @Html.Partial("/App_Plugins/Lecoati.LeBlender/core/views/Blender.cshtml", blenderModel, datas)
-        </text>
-    }
-
-}
-catch (Exception ex)
-{
-    if (!Helper.IsFrontEnd())
-    {
-        <p class="red">Something went wrong with this editor, below is the exception detail:</p>
-    }
-    <pre class="leblender-exception">@Helper.GetInnerMessage(ex)</pre>
-} 
 
