--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/views_samples/Highlight.cshtml
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/views_samples/Highlight.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@inherits UmbracoViewPage<Lecoati.LeBlender.Extension.Models.BlenderModel>
+@inherits UmbracoViewPage<Lecoati.LeBlender.Extension.Models.LeBlenderModel>
 
 @{
     
