--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/assets/parameterconfig.css
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/assets/parameterconfig.css
@@ -15,11 +15,13 @@
 
 #blender-grid-editor-parameter .list {
     padding: 0px 0 5px 0;
-    cursor:pointer;
     height:0;
     position:relative;
     background:#fff;
     overflow:hidden;
+}
+#blender-grid-editor-parameter .list > span.list-number {
+    cursor:pointer;
 }
 
 #blender-grid-editor-parameter .multiple {
