A first throw of porting LeBlender to Umbraco V8

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/views/Base.cshtml
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/views/Base.cshtml
@@ -1,33 +1,24 @@
-﻿@using System.Web.Mvc.Html;
-@using Lecoati.LeBlender.Extension
-@using Lecoati.LeBlender.Extension.Models
+﻿@using System.Web.Mvc;
+@using Lecoati.LeBlender.Extension;
+@using Lecoati.LeBlender.Extension.Models;
 
 @try
 {
+	var helper = new Helper();
+	string guid = Model.guid != null && Model.guid.Value != null ? Model.guid.Value.ToString() : "";
+	LeBlenderModel blenderModel = helper.DeserializeBlenderModel(Model);
 
-    string guid = Model.guid != null && Model.guid.Value != null ? Model.guid.Value.ToString() : "";
-    LeBlenderModel blenderModel = Helper.DeserializeBlenderModel(Model);
+	var frontView = Model.editor.config == null || Model.editor.config.frontView == null || String.IsNullOrEmpty(Model.editor.config.frontView.Value) ?
+		"" : Model.editor.config.frontView.Value;
 
-    var frontView = Model.editor.config == null || Model.editor.config.frontView == null || String.IsNullOrEmpty(Model.editor.config.frontView.Value) ?
-        "" : Model.editor.config.frontView.Value;
+	ViewDataDictionary datas = new ViewDataDictionary() { { "editorAlias", Model.editor.alias }, { "frontView", frontView } };
 
-    ViewDataDictionary datas = new ViewDataDictionary() { { "editorAlias", Model.editor.alias }, { "frontView", frontView } };
-    // Remove all Keys you entered in datas.
-    var keys = ViewData.Keys.Where( k =>
-         !datas.Keys.Any( x => x == k )
-    );
-	// Add the keys from ViewData to the new Dictionary
-    foreach (var key in keys)
-    {
-        datas.Add( key, ViewData["key"] );
-    }
+	int cacheExpiration = helper.GetCacheExpiration(Model.editor.alias.ToString());
 
-    int cacheExpiration = Helper.GetCacheExpiration(Model.editor.alias.ToString());
-
-    if (cacheExpiration > 0 && Helper.IsFrontEnd())
-    {
+	if (cacheExpiration > 0 && helper.IsFrontEnd())
+	{
         <text>
-            @Html.LeBlenderCachedPartial("/App_Plugins/LeBlender/editors/leblendereditor/views/LeBlender.cshtml", blenderModel, cacheExpiration, guid, datas)
+            @LeBlenderPartialCacher.LeBlenderCachedPartial(Html,"/App_Plugins/LeBlender/editors/leblendereditor/views/LeBlender.cshtml", blenderModel, cacheExpiration, guid, datas)
         </text>
     }
     else
@@ -40,10 +31,10 @@
 }
 catch (Exception ex)
 {
-    if (!Helper.IsFrontEnd())
+    if (!new Helper().IsFrontEnd())
     {
         <p class="red">Something went wrong with this editor, below is the exception detail:</p>
     }
-    <p class="leblender-exception">@Helper.GetInnerMessage(ex)</p>
+    <p class="leblender-exception">@ex.ToString()</p>
 } 
 
