--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/views/LeBlender.cshtml
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/views/LeBlender.cshtml
@@ -1,3 +1,3 @@
 ﻿@using System.Web.Mvc.Html;
    
-@(Html.Action("RenderEditor", "LeBlender", new { area="", editorAlias = ViewData["editorAlias"], frontView = ViewData["frontView"], model = Model }))
+@(Html.Action("RenderEditor", "LeBlender", new { editorAlias = ViewData["editorAlias"], frontView = ViewData["frontView"], model = Model }))
