--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/views/Base.cshtml
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/views/Base.cshtml
@@ -12,6 +12,15 @@
 		"" : Model.editor.config.frontView.Value;
 
 	ViewDataDictionary datas = new ViewDataDictionary() { { "editorAlias", Model.editor.alias }, { "frontView", frontView } };
+	
+    var keys = ViewData.Keys.Where( k =>
+         !datas.Keys.Any( x => x == k )
+    );
+	// Add the keys from ViewData to the new Dictionary
+    foreach (var key in keys)
+    {
+        datas.Add( key, ViewData[key] );
+    }	
 
 	int cacheExpiration = helper.GetCacheExpiration(Model.editor.alias.ToString());
 
