Umbraco 8: Make the backoffice content id available in the views

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/views/Base.cshtml
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/views/Base.cshtml
@@ -15,6 +15,10 @@
 		"" : Model.editor.config.frontView.Value;
 
 	ViewDataDictionary datas = new ViewDataDictionary() { { "editorAlias", Model.editor.alias }, { "frontView", frontView } };
+	if (Model.contentId != null)
+	{
+		datas.Add( "contentId", (int)Model.contentId );
+	}
 
 	var keys = ViewData.Keys.Where( k =>
 		 !datas.Keys.Any( x => x == k )
