--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/assets/parameterconfig.css
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/assets/parameterconfig.css
@@ -1,18 +1,3 @@
-
-.list-panel {
-    padding:50px 30px;
-}
-
-#blender-grid-editor-parameter em {
-    margin-bottom: 20px;
-    display: block;
-    margin-top: -15px;
-}
-
-#blender-grid-editor-parameter i {
-    margin-left:5px;
-}
-
 #blender-grid-editor-parameter .list {
     padding: 0px 0 5px 0;
     height:0;
@@ -43,21 +28,12 @@
     overflow:initial;
 }
 
-#blender-grid-editor-parameter a:hover, a:focus {
-    text-decoration: none;
-}
-
-#blender-grid-editor-parameter .umb-sortable-thumbnails li {
-    border: 1px solid #EBEBEB;
-}
-
 #blender-grid-editor-parameter .list-number {
     right: 0;
     left: 0;
     font-weight: bolder;
     margin-bottom: 10px;
     display: block;
-    margin-top: -22px;
     padding: 4px 10px;
     color: #555;
     background: #f8f8f8;
@@ -75,18 +51,17 @@
     text-overflow: ellipsis;
 }
 
-
 #blender-grid-editor-parameter .list-number i {
     float:right;
 }
 
 #blender-grid-editor-parameter .list .list-number:hover {
-    background-color:#EBEBEB;
+    background-color:#ebebeb;
 }
 
 #blender-grid-editor-parameter .list-add-row {
     padding: 5px;
-    color: #aaaaaa;
+    color: #aaa;
     text-align: right;
 }
 
@@ -115,5 +90,4 @@
 
 #blender-grid-editor-parameter .list-icons li {
     padding-left: 0px;
-
 }
